# i2d-meson-build

./: LICENSE  README.md
i2pd/: meson.build
